# stt-nix

./: README.md  flake.nix  garnix.yaml  module.nix  pyproject.toml
.github/workflows/: build.yml
src/stt_nix/: __main__.py  cli.py  config.py  daemon.py  hotkey.py  output.py  recorder.py  transcriber.py  tray.py
